Bug 435213 - Title clip length changes when updating title
Summary: Title clip length changes when updating title
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 22.03.80
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-01 09:32 UTC by Roxane
Modified: 2022-03-21 13:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roxane 2021-04-01 09:32:54 UTC
SUMMARY
So this a really weird (and minor) one, and i had not really noticed what exactly happened until today, but I had noticed my title clips were not all the same length in the bin. I now have noticed that every time i hit "update title" in the editor, the title clip shortens by one frame.

STEPS TO REPRODUCE
1. create title clip (even empty works). In my case, it should be 5s long, but ends up being 4:23 (in 24fps).
2. double click on its thumbnail to edit it
3. the length of the clip automatically changes to 4:22
4. repeat 2 and it will shorten again and again

OBSERVED RESULT
Title clip has shorten length than is defined in the parameters

EXPECTED RESULT
Title clip stays length defined in the parameters.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Debian unstable
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
20.12.3a appimage
Comment 1 Julius Künzel 2021-04-01 19:52:44 UTC
This is indeed strange and I can not reproduce. Does the length already change in the titler dialog or only after you hit update in the project bin?

Can you try with the last nightly appimage? I made a change to duration editing recently and maybe this is "fixed accidentally"…
Comment 2 Roxane 2021-04-02 11:02:11 UTC
(In reply to Julius Künzel from comment #1)
> This is indeed strange and I can not reproduce. Does the length already
> change in the titler dialog or only after you hit update in the project bin?

It changes when I click the button "Update Title" on the bottom right of the titler.

> Can you try with the last nightly appimage? I made a change to duration
> editing recently and maybe this is "fixed accidentally"…

I tried in 21.07.70, and it doesn't change length after, but there's still a discrepancy between the length in the settings (5s) and the length of the clip 4:23s
Comment 3 Roxane 2021-04-05 16:09:57 UTC
Hi! I've randomly discovered new things. It one bugs in 23.98 fps (tested 24, 30 and 29.97). And color clips are affected as well
Comment 4 Bug Janitor Service 2021-04-20 04:33:16 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Bug Janitor Service 2021-05-05 04:33:39 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 6 Julius Künzel 2022-03-21 12:12:23 UTC
I can still confirm this with 22.03.80
Comment 7 Julius Künzel 2022-03-21 13:27:27 UTC
Git commit 4b7f91db359fdb493df7a49ebc94684694192ab9 by Julius Künzel.
Committed on 21/03/2022 at 13:27.
Pushed by jlskuz into branch 'release/22.04'.

Fix timecode rounding for fps like 23.98

M  +1    -1    src/utils/timecode.cpp

https://invent.kde.org/multimedia/kdenlive/commit/4b7f91db359fdb493df7a49ebc94684694192ab9