Fix timecode rounding for fps like 23.98

BUG: 435213